@@ -4,6 +4,8 @@ partman (41) UNRELEASED; urgency=low
     - m68k: make userdevfs support consistent.
   * Joshua Kwan
     - Remove heinous cat abuse in init.d/mount_target.
+  * Martin Michlmayr
+    - Add more SGI definitions (Indy, Origin, O2).
 
  -- Stephen R. Marenka <smarenka@debian.org>  Tue, 25 May 2004 15:30:54 -0500
 
